--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "eventsource-parser": "^1.0.0",
     "next": "^13.4.7",
     "openai": "^3.3.0",
     "postcss": "8.4.24",
