--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "eslint-config-next": "13.4.7",
     "eventsource-parser": "^1.0.0",
     "next": "^13.4.7",
+    "next-themes": "^0.2.1",
     "openai": "^3.3.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
